# plasma-dynamic-island

./: .editorconfig  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev.sh  install.sh  metadata.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
contents/config/: config.qml  main.xml
contents/ui/: IslandCapsule.qml  IslandController.qml  IslandExpandedWindow.qml  IslandShell.qml  IslandWindow.qml  MediaSource.qml  NotificationSource.qml  OsdSource.qml  ProgressSource.qml  TestHarness.qml  Theme.qml  TimerSource.qml  main.qml  qmldir
contents/ui/components/: Marquee.qml
contents/ui/content/: MediaContent.qml  NotificationContent.qml  OsdContent.qml  ProgressContent.qml  TimerContent.qml
docs/: phase2-review.md  phase3-design-reference.md
plugin/: CMakeLists.txt  DBusSignalListener.cpp  DBusSignalListener.h  test.qml
